--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ body {
 }
 
 @media (max-width: 375px) {
-  .menu-models, .shop, .WHS {
+  .menu-models, .shop, .WHS, .safety__img {
     display: none;
   }
 
@@ -149,7 +149,7 @@ body {
 
 @media (min-width: 376px) and (max-width: 768px) {
 
-  .menu-models, .shop, .footer {
+  .menu-models, .shop, .WHS, .safety__img {
     display: none;
   }
 
@@ -226,7 +226,7 @@ body {
   }
 
   .shop__item_buy {
-    margin-right: 18%;
+    margin-right: 11%;
     font-size: 16px;
   }
 
@@ -558,7 +558,8 @@ body {
   .main__welcome {
     text-align: center;
     width: 65%;
-    font-size: 17px;
+    font-size: 14px;
+    letter-spacing: 0.3px;
     position: relative;
     margin-top: -3.2%;
     margin-bottom: 11.2%;
@@ -571,43 +572,90 @@ body {
 }
 
 .info {
-  margin-bottom: 2.5%;
+  display: inline-block;
+  margin-bottom: 7.5%;
   margin-left: 0;
   width: 100%;
 }
 
 .info__spkm {
-  margin-bottom: 9%;
+  display: flex;
+  margin-bottom: 4.5%;
 }
 
  .info__spkm_speed {
-   margin-left: 18.5%;
-   width: 29%;
+   margin-right: 0;
+   background-size: 34%;
+   padding-left: 12%;
+   margin-left: 17.5%;
+   background-position-y: 115%;
+   width: 19%;
    height: 81.26px;
 }
 
+.sec {
+  font-size: 50px;
+  margin-top: 6%;
+  line-height: 52px;
+}
+
+.sec__sec {
+  position: relative;
+  vertical-align: middle;
+  left: -5px;
+}
+
+.razgon {
+  font-size: 12px;
+}
+
 .info__spkm_km {
-  margin-left: 7.5%;
+  padding-left: 8.8%;
+  margin-left: 6.2%;
   width: 26%;
-  height: 85.12px;
+  height: 96.12px;
+  background-size: 22%;
+  background-position-y: 159%;
+}
+
+.km632 {
+  font-size: 50px;
+  margin-top: 6%;
+}
+
+.km632_km {
+  position: relative;
+  left: -7px;
+  top: -7px;
+}
+
+.distance {
+  font-size: 11px;
 }
 
 .info__more_test {
-  background-image: url(img/TestdriveIpad.svg);
-  width: 21.5%;
+  letter-spacing: 0.7px;
+  color: #e51937;
+  background-image: url(img/rul-red.svg);
+  width: 17.5%;
   height: 52px;
   margin-left: 22.5%;
   margin-top: 0.5%;
+  padding-left: 6.3%;
+  top: 10px;
+  font-size: 15px;
+  background-position-y: 27%;
+  background-size: 18%;
 }
 
 .info__more_order {
+  margin-left: 1.5%;
   letter-spacing: 1px;
   padding-top: 0%;
-  margin-left: 3.7%;
   width: 29%;
-  top: -40px;
-  height: 57px;
-  font-size: 17px;
+  top: 10px;
+  height: 56px;
+  font-size: 14px;
   background: #E51937;
   color: #FFFFFF;
 }
@@ -640,7 +688,8 @@ body {
    text-align: center;
    margin-bottom: 2%;
    width: 20%;
-   font-size: 15px;
+   font-size: 14px;
+   letter-spacing: 0.5px;
  }
 
 .main__picture {
@@ -658,6 +707,7 @@ body {
 }
 
 .info__spkm_speed {
+  background-size: 32%;
   top: -8px;
   position: relative;
 }
@@ -665,6 +715,28 @@ body {
 .info__spkm_km {
   width: 16%;
   height: 65px;
+}
+
+.sec__sec {
+  position: relative;
+  left: -7px;
+}
+
+.razgon {
+  position: relative;
+  top: -3px;
+  font-size: 12px;
+}
+
+.km632_km {
+  position: relative;
+  left: -8px;
+}
+
+.distance {
+  font-size: 11px;
+  position: relative;
+  top: -4px;
 }
 
 .info__more_test {
@@ -819,6 +891,8 @@ body {
 }
 
 .options {
+  display: flex;
+  flex-direction: column;
   margin-bottom: 36%;
 }
 
@@ -1035,12 +1109,15 @@ h1, h4 {
 }
 
 .info-models {
+  display: flex;
+  flex-wrap: wrap;
   padding-top: 4.5%;
   width: 100%;
   margin-top: 0;
 }
 
 .drive {
+  display: block;
   padding-top: 3%;
 }
 
@@ -1049,15 +1126,15 @@ h1, h4 {
   padding-top: 0;
   position: relative;
   margin-left: 9%;
-  margin-bottom: 5%;
-  font-size: 32px;
-  letter-spacing: 0.6px;
+  margin-bottom: 6%;
+  font-size: 28px;
+  letter-spacing: 1px;
 }
 
 .drive__text {
   line-height: 18px;
   letter-spacing: 1px;
-  font-size: 15px;
+  font-size: 13px;
   width: 90%;
   position: relative;
   margin-left: 9%;
@@ -1066,44 +1143,70 @@ h1, h4 {
 .options__display {
   width: 50%;
   position: relative;
-  left: 19.5%;
-  padding-top: 6%;
+  left: 20.5%;
+  padding-top: 5%;
   margin-bottom: 0;
 }
 
-.protection__front {
-  margin-top: -40%;
+.options__display_title {
+  margin-top: 0;
+  font-size: 35px;
 }
 
-.protection__driver {
-  margin-top: -10.5%;
+.option__display_text {
+  font-size: 10px;
+  letter-spacing: 1px;
 }
 
 .options__wifi {
-  width: 71%;
+  margin-top: 6%;
+  padding-left: 17.3%;
+  width: 60%;
   position: relative;
   margin-bottom: 0;
-  padding-top: 5%;
-  left: 18.5%;
-}
-
-.options__bag {
-  width: 54%;
-  padding-bottom: 1%;
-  position: relative;
   left: 19.5%;
 }
 
+.options__wifi_title {
+  margin-top: 0;
+  font-size: 20px;
+}
+
+.option__wifi_text {
+  font-size: 10px;
+  letter-spacing: 1px;
+}
+
+.options__bag {
+  background-size: 14%;
+  margin-top: 8.5%;
+  width: 54%;
+  padding-bottom: 1%;
+  position: relative;
+  left: 20.5%;
+  padding-left: 16.5%;
+}
+
+.options__bag_title {
+  margin-top: 0;
+  letter-spacing: 3px;
+}
+
+.option__bag_text {
+  font-size: 10px;
+  margin-top: 2.5%;
+}
+
 .more {
+  width: 100%;
   padding-top: 7%;
   padding-bottom: 6.8%;
 }
 
 .more__info {
-  font-size: 15px;
-  letter-spacing: 2px;
+  font-size: 16px;
   vertical-align: super;
-  margin-left: 1%;
+  margin-left: 0.8%;
   width: 24%;
 }
 
@@ -1125,7 +1228,7 @@ h1, h4 {
   top: 0;
   width: 29%;
   height: 54px;
-  font-size: 15px;
+  font-size: 13px;
   margin-left: 10.4%;
   left: 1.4%;
   padding-top: 0;
@@ -1195,8 +1298,8 @@ h1, h4 {
 
 .drive__title {
   margin-top: 15.6%;
-  letter-spacing: 2px;
-  font-size: 29px;
+  letter-spacing: 3px;
+  font-size: 25px;
 }
 
 .info-models {
@@ -1210,10 +1313,10 @@ h1, h4 {
 
 .drive__text {
   margin-top: 5%;
-  letter-spacing: 1px;
+  letter-spacing: 0.9px;
   line-height: 18px;
-  font-size: 15px;
-  width: 96%;
+  font-size: 13px;
+  width: 93%;
 }
 
 .more__icon {
@@ -1232,15 +1335,52 @@ h1, h4 {
 
 .options__display {
   width: 56%;
+  padding-left: 16%;
+  background-position-y: 99%;
+  height: 70px;
+}
+
+.options__display_title {
+  margin-top: 3%;
+  font-size: 33px;
+}
+
+.option__display_text {
+  font-size: 10px;
+  letter-spacing: 1px;
+  margin-top: 0.8%;
 }
 
 .options__wifi {
-  width: 85%;
+  margin-bottom: 11%;
+  background-size: 17%;
+  width: 55%;
   margin-left: -2%;
+  }
+
+  .options__wifi_title {
+    margin-top: 1.5%;
+    font-size: 18px;
+    letter-spacing: 1px;
+  }
+
+  .option__wifi_text {
+    font-size: 10px;
   }
 
 .options__bag {
   width: 60%;
+  background-size: 14%;
+}
+
+.options__bag_title {
+  margin-top: 0;
+  letter-spacing: 3px;
+}
+
+.option__bag_text {
+  font-size: 10px;
+  margin-top: 3.2%;
 }
 
 .more__order {
@@ -1253,6 +1393,11 @@ h1, h4 {
 .more {
   padding-bottom: 15.1%;
 }
+
+.more__info {
+  font-size: 13px;
+}
+
 }
 
 
@@ -1605,7 +1750,7 @@ h1, h4 {
 
 @media (max-width: 375px) {
 
-  .protection, .info-safety__result, .more-safety, .footer {
+  .protection, .info-safety__result, .more-safety, .WHS, .safety__img {
     display: none;
   }
 
@@ -1648,13 +1793,13 @@ h1, h4 {
 
 @media (min-width: 376px) and (max-width: 768px) {
 
-.info-safety__result, .footer {
+.info-safety__result, .WHS, .safety__img {
   display: none;
 }
 
 .safety {
   position: relative;
-  background-position-y: 12.8%, 6.5%;
+  background-position-y: 12.8%, 7.5%;
   background-position-x: -3%, 53%;
   background-size: 96%, 77%;
   background-image:
@@ -1680,6 +1825,8 @@ h1, h4 {
 }
 
 .protection {
+  display: flex;
+  flex-direction: column;
   width: 49%;
   margin-top: 9%;
   position: relative;
@@ -1688,18 +1835,21 @@ h1, h4 {
 
 .protection__title {
   width: 70%;
-  margin-bottom: 44%;
+  margin-bottom: 4%;
+  margin-left: 12%;
 }
 
 .description__title {
   padding-top: 13%;
   margin-left: 9%;
-  font-size: 32px;
+  font-size: 29px;
+  letter-spacing: 0.4px;
 }
 
 .description__text {
-  letter-spacing: 1.7px;
-  font-size: 14px;
+  margin-top: 4.2%;
+  letter-spacing: 1.5px;
+  font-size: 12px;
   margin-left: 9%;
   width: 90%;
   line-height: 18px;
@@ -1708,12 +1858,12 @@ h1, h4 {
 .protection__front {
   display: flex;
   width: 85%;
-  position: absolute;
-  margin-top: -40%
+  margin-bottom: 3%;
 }
 
 .protection__front_title {
-  margin-top: 2%;
+  margin-top: 1%;
+  font-size: 17px;
   width: 28%;
   margin-right: 19%;
 }
@@ -1724,8 +1874,7 @@ h1, h4 {
 
 .protection__side {
   width: 85%;
-  position: absolute;
-  margin-top: -30%;
+  margin-bottom: 3.2%;
 }
 
 .protection__side_title {
@@ -1733,6 +1882,7 @@ h1, h4 {
   padding-top: 0;
   margin-right: 28%;
   width: 19%;
+  font-size: 17px;
 }
 
 .protection__side_star1 {
@@ -1741,8 +1891,7 @@ h1, h4 {
 
 .protection__rack  {
   width: 85%;
-  position: absolute;
-  margin-top: -20%;
+  margin-bottom: 3.2%;
 }
 
 .protection__rack_title {
@@ -1750,6 +1899,7 @@ h1, h4 {
   padding-top: 0;
   margin-top: 1.2%;
   margin-right: 12%;
+  font-size: 17px;
 }
 
 .protection__rack_star1 {
@@ -1757,14 +1907,13 @@ h1, h4 {
 }
 
 .litle {
-  font-size: 11px;
+  font-size: 9px;
   margin-left: 6%;
 }
 
 .protection__driver {
   width: 85%;
-  position: absolute;
-  margin-top: -10.5%;
+  margin-bottom: 3.2%;
 }
 
 .protection__driver_star1 {
@@ -1774,21 +1923,20 @@ h1, h4 {
   margin-right: 14.5%;
   width: 33%;
   margin-top: 1.5%;
-  font-size: 18px;
+  font-size: 16px;
   letter-spacing: 1px;
 }
 
 .protection__passangeer {
   width: 85%;
-  position: absolute;
-  margin-top: 0%;
   letter-spacing: 1px;
 }
 
 .protection__passangeer_title {
-  margin-top: 1%;
+  margin-top: 1.5%;
   margin-right: 12.5%;
   width: 35%;
+  font-size: 16px;
 }
 
 .opa {
@@ -1797,7 +1945,7 @@ h1, h4 {
 
 .more-safety {
   padding-bottom: 7.2%;
-  margin-top: 11%;
+  margin-top: 9%;
 }
 
 .more-safety__icon {
@@ -1807,7 +1955,7 @@ h1, h4 {
 }
 
 .more-safety__info {
-  font-size: 18px;
+  font-size: 16px;
   margin-left: 8.5%;
   width: 25%;
   vertical-align: super;
@@ -1817,9 +1965,10 @@ h1, h4 {
   margin-left: 0;
   width: 28%;
   height: 35px;
-  top: -8px;
-  font-size: 18px;
+  top: -9px;
+  font-size: 16px;
   padding-top: 15px;
+  vertical-align: sub;
 }
 }
 
@@ -1994,25 +2143,37 @@ h1, h4 {
 }
 
 @media (min-width: 1440px) {
+  .safety {
+    display: flex;
+    background-image: url(img/ModelS.svg);
+    background-size: 55%;
+    background-position-y: 19%;
+    background-position-x: 100%;
+  }
 
-.drive__title {
-  font-size: 30px;
-}
+  .safety__img {
+    position: relative;
+    width: 69.5%;
+  }
 
-.options__wifi {
-  margin-left: -1%;
-}
+  .safety__img_img {
+    position: absolute;
+    left: -9.5%;
+    top: 19%;
+    width: 105%;
+  }
 
 .description__title {
-  font-size: 32px;
+  letter-spacing: 0.2px;
+  font-size: 29px;
   padding-top: 12%;
 }
 
 .description__text {
-  margin-top: 3%;
+  margin-top: 4%;
   letter-spacing: 1.6px;
   line-height: 18px;
-  font-size: 14px;
+  font-size: 12px;
   width: 73%;
 }
 
@@ -2054,9 +2215,12 @@ h1, h4 {
   font-size: 17px;
   letter-spacing: 1px;
   margin-right: 9.3%;
+  position: relative;
+  top: 4px;
 }
 
 .litle {
+  margin-left: 0;
   font-size: 9px;
 }
 
@@ -2066,13 +2230,15 @@ h1, h4 {
 .protection__driver_title {
   padding-top: 1.5%;
   font-size: 16px;
-  letter-spacing: 2px;
+  letter-spacing: 1.5px;
   margin-right: 12%;
+  top: -1px;
+  position: relative;
 }
 
 .protection__passangeer_title {
   padding-top: 1.5%;
-  font-size: 17px;
+  font-size: 16px;
   letter-spacing: 1.5px;
 }
 
@@ -2081,16 +2247,42 @@ h1, h4 {
 }
 
 .info-safety__result {
+  font-family: "Montserrat", arial, helvetica, sans-serif;
   margin-top: 23%;
+  font-size: 49px;
+}
+
+.sesurity {
+  font-size: 24px;
 }
 
 .protection {
   margin-bottom: 21%;
 }
 
+.more-safety__info {
+  font-size: 13px;
+}
+
 .more-safety__order {
   top: 0;
   padding-top: 2%;
+}
+
+.WHS__title {
+  font-size: 10px;
+  width: 22%;
+  left: 303.5%;
+}
+
+.WHS__text {
+  width: 24%;
+  left: 302.5%;
+  letter-spacing: 1.5px;
+}
+
+.WHS__school {
+  width: 11%;
 }
 }
 
