--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ a, button {
   cursor: pointer;
 }
 
+
+
 .header {
   display: flex;
   align-content: center;
@@ -250,7 +252,7 @@ a, button {
 @media (min-width: 769px) and (max-width: 1439px) {
   .logo {
     background-size: contain;
-    margin-right: 7%;
+    margin-right: 9%;
     width: 12%;
     margin-left: 3%;
   }
@@ -262,13 +264,13 @@ a, button {
   .menu-models__item_energy,
   .shop__item_buy,
   .shop__item_enter {
-    font-size: 15px;
+    font-size: 14px;
     margin-right: 4%;
   }
 
   .menu-models {
     padding-top: 1%;
-    width: 50%;
+    width: 54%;
     margin-right: 1%;
   }
 
@@ -379,6 +381,7 @@ a, button {
   }
 
   .info__more_test {
+    color: #e51937;
     padding-top: 2%;
     font-size: 14px;
     letter-spacing: 0.3px;
@@ -393,7 +396,7 @@ a, button {
     background-size: 15%;
     padding-left: 4%;
     font-family: "Montserrat", arial, helvetica, sans-serif;
-    background-image: url(img/rul.svg);
+    background-image: url(img/rul-red.svg);
     background-position-y: 33%
   }
 
@@ -779,7 +782,7 @@ a, button {
   }
   .main__welcome {
     text-align: center;
-    width: 34%;
+    width: 37%;
     font-size: 17px;
     position: relative;
     top: -28px;
@@ -799,32 +802,54 @@ a, button {
 }
 
 .info__spkm {
+  width: 50%;
+  display: flex;
   margin-bottom: 9%;
 }
 
  .info__spkm_speed {
-   margin-left: 18.5%;
-   width: 29%;
+   margin-left: 9.5%;
+   padding-left: 20%;
+   width: 38%;
    height: 81.26px;
+   background-size: 41%;
+   background-position-y: 44%;
+}
+
+.sec {
+  font-size: 33px;
 }
 
 .info__spkm_km {
-  margin-left: 8%;
-  width: 26%;
+  background-position-y: 74%;
+  padding-left: 12.5%;
+  margin-left: 1%;
+  width: 36%;
   height: 83.12px;
 }
 
+.km632 {
+  font-size: 24px;
+}
+
+.info__more {
+  display: flex;
+  width: 50%;
+}
+
 .info__more_test {
-  width: 21.5%;
+  background-position-y: 20%;
+  padding-left: 7%;
+  width: 29.5%;
   height: 52px;
-  margin-left: 22.5%;
+  margin-left: 8.5%;
   top: -6px;
 }
 
 .info__more_order {
   margin-left: 3.4%;
-  width: 29%;
-  top: -37px;
+  width: 45%;
+  top: -6px;
   height: 57px;
   font-size: 23px;
   background: #E51937;
@@ -1252,6 +1277,10 @@ h1, h4 {
     width: 28%;
   }
 
+  .drive {
+    width: 81%;
+  }
+
 .info-models {
   width: 31%;
 }
@@ -1266,14 +1295,38 @@ h1, h4 {
 
 .options__display {
   width: 90%;
+  padding-left: 21%;
+  background-size: 14%;
+}
+
+.options__display_title {
+  font-size: 34px;
+  margin-top: 0;
 }
 
 .options__wifi {
-  width: 104%;
+  width: 90%;
+  margin-bottom: 20%;
+}
+
+.options__wifi_title {
+  font-size: 17px;
+}
+
+.option__wifi_text {
+  font-size: 8px;
 }
 
 .options__bag {
   width: 96%;
+}
+
+.options__bag_title {
+  margin-top: 0;
+}
+
+.option__bag_text {
+  font-size: 10px;
 }
 
 .more__info {
@@ -1284,7 +1337,7 @@ h1, h4 {
 .more__order {
   padding-top: 4px;
   top: -5px;
-  width: 29%;
+  width: 33%;
   font-size: 11px;
 }
 
@@ -1419,7 +1472,6 @@ h1, h4 {
 
 
 .info-safety {
-  z-index: -1;
   display: inline-block;
   width: 30.5%;
   position: relative;
@@ -1978,8 +2030,13 @@ h1, h4 {
 
 @media (min-width: 769px) and (max-width: 1439px) {
 
+
   .safety {
-    background-position-x: 94%, 100%;
+    display: flex;
+    background-image: url(img/ModelS.svg);
+    background-size: 55%;
+    background-position-y: 19%;
+    background-position-x: 100%;
   }
 
   .description {
@@ -1989,6 +2046,8 @@ h1, h4 {
   }
 
   .protection {
+    flex-direction: column;
+    display: flex;
     width: 100%;
     margin-top: 9%;
     position: relative;
@@ -1997,7 +2056,6 @@ h1, h4 {
 
   .protection__title {
     width: 70%;
-    margin-bottom: 44%;
   }
 
   .description__title {
@@ -2016,8 +2074,6 @@ h1, h4 {
   .protection__front {
     display: flex;
     width: 85%;
-    position: absolute;
-    margin-top: -40%
   }
 
   .protection__front_title {
@@ -2033,8 +2089,6 @@ h1, h4 {
 
   .protection__side {
     width: 85%;
-    position: absolute;
-    margin-top: -30%;
   }
 
   .protection__side_title {
@@ -2051,8 +2105,6 @@ h1, h4 {
 
   .protection__rack  {
     width: 85%;
-    position: absolute;
-    margin-top: -20%;
   }
 
   .protection__rack_title {
@@ -2068,21 +2120,19 @@ h1, h4 {
   }
 
   .litle {
-    font-size: 8px;
-    margin-left: 5%;
+    font-size: 7px;
+    margin-left: 0;
   }
 
   .protection__driver {
     width: 85%;
-    position: absolute;
-    margin-top: -10.5%;
   }
 
   .protection__driver_star1 {
   }
 
   .protection__driver_title {
-    font-size: 16px;
+    font-size: 14px;
     margin-right: 14.5%;
     width: 33%;
     margin-top: 1.5%;
@@ -2091,13 +2141,11 @@ h1, h4 {
 
   .protection__passangeer {
     width: 85%;
-    position: absolute;
-    margin-top: 0%;
     letter-spacing: 1px;
   }
 
   .protection__passangeer_title {
-    font-size: 15px;
+    font-size: 13px;
     margin-top: 1%;
     margin-right: 12.5%;
     width: 35%;
@@ -2105,8 +2153,13 @@ h1, h4 {
 
 .info-safety__result {
   margin-bottom: 0;
-  width: 75%;
-  background-size: contain;
+  width: 64%;
+  background-size: 21%;
+  font-size: 46px;
+}
+
+.sesurity {
+  font-size: 25px;
 }
 
   .opa {
@@ -2130,18 +2183,45 @@ h1, h4 {
     top: -7px;
     font-size: 11px;
     margin-left: 8.5%;
-    width: 43%;
+    width: 45%;
     vertical-align: super;
   }
 
   .more-safety__order {
     margin-left: 0;
-    width: 28%;
+    width: 32%;
     height: 12px;
     top: -11px;
     font-size: 11px;
     padding-top: 5px;
     padding-bottom: 5px;
+  }
+
+  .WHS__title {
+    width: 32%;
+    left: 295%;
+  }
+
+  .WHS__text {
+    left: 290%;
+  }
+
+  .WHS__school {
+    left: 308%;
+    width: 17%;
+  }
+
+  .safety__img {
+    position: relative;
+    width: 69.5%;
+  }
+
+  .safety__img_img {
+    position: absolute;
+    left: -9.5%;
+    top: 19%;
+    width: 105%;
+
   }
 
 }
@@ -2291,37 +2371,99 @@ h1, h4 {
 }
 
 @media (min-width: 376px) and (max-width: 550px) {
+  .main__picture {
+    height: 239px;
+  }
+
+ .info__spkm_speed {
+   background-position-y: 14%;
+   height: 53.26px;
+ }
+
+ .sec {
+   font-size: 30px;
+   line-height: 24px;
+ }
+
+ .sec__sec {
+   font-size: 10px;
+ }
+
+ .razgon {
+   font-size: 6px;
+ }
+
+ .info__spkm_km {
+   height: 56.12px;
+   background-position-y: 30%
+ }
+
+ .km632 {
+   font-size: 30px;
+ }
+
+ .km632_km {
+   top: 0;
+   font-size: 13px;
+ }
+
+ .distance {
+   top: -7px;
+   font-size: 8px;
+   position: relative;
+ }
+
+ .info__more_test {
+   margin-left: 17.5%;
+   font-size: 11px;
+   width: 22.5%;
+   background-position-y: 15%;
+ }
+
+ .info__more_order {
+    width: 35%;
+    margin-left: 5.5%;
+ }
+
+ .future {
+   background-position-y: 11.8%;
+ }
+
   .protection__passangeer_title,
   .protection__driver_title {
-    font-size: 12px;
+    font-size: 10px;
   }
 
 
   .protection__rack_title,
   .protection__side_title,
   .protection__front_title {
-    font-size: 14px;
+    font-size: 13px;
   }
 
   .litle {
-    font-size: 6px;
+    font-size: 5px;
+    margin-left: 0;
   }
 
   .description__title {
-    font-size: 17px;
+    font-size: 15px;
   }
 
   .description__text {
-    font-size: 8px;
+    font-size: 10px;
     line-height: 11px;
   }
 
   .more-safety__info {
+    width: 28%;
     font-size: 11px;
     top: -7px;
   }
 
   .more-safety__order {
+    margin-left: 11%;
+    width: 31%;
     font-size: 13px;
     height: 14px;
     top: -13px;
@@ -2329,20 +2471,59 @@ h1, h4 {
   }
 
   .drive__title {
-    font-size: 17px;
+    font-size: 14px;
   }
 
   .drive__text{
     font-size: 8px;
-    line-height: 15px;
+    line-height: 11px;
   }
 
   .options__display {
+    margin-bottom: 11%;
     height: 37px;
+    background-position-y: 77%;
+  }
+
+  .options__display_title {
+    font-size: 19px;
+  }
+
+  .inch {
+    font-size: 11px;
+  }
+
+  .option__display_text {
+    font-size: 7px;
   }
 
   .options__wifi {
+    margin-bottom: 16%;
+    background-size: 17%;
     height: 41px;
+  }
+
+  .options__wifi_title {
+    font-size: 10px;
+    line-height: 12px;
+  }
+
+  .option__wifi_text {
+    font-size: 6px;
+  }
+
+  .options__bag_title {
+    font-size: 18px;
+    line-height: 15px;
+  }
+
+  .liters {
+    font-size: 7px;
+  }
+
+  .option__bag_text {
+    font-size: 8px;
+    width: 95%;
   }
 
   .future-block {
@@ -2364,6 +2545,10 @@ h1, h4 {
 
   .more__icon {
     margin-left: 8%;
+  }
+
+  .more-safety__icon {
+    margin-left: 3.6%;
   }
 
 }
