--- a/style.css
+++ b/style.css
@@ -321,6 +321,7 @@ a, button {
 
   .info__spkm_speed {
     font-family: "Montserrat", arial, helvetica, sans-serif;
+    font-weight: 600;
     margin-right: 8%;
     margin-left: 44%;
     padding-left: 9%;
@@ -343,16 +344,19 @@ a, button {
  .sec__sec {
    font-family: "Montserrat", arial, helvetica, sans-serif;
    font-size: 20px;
+   font-weight: 600;
  }
 
   .razgon {
     font-family: "Montserrat", arial, helvetica, sans-serif;
     font-size: 15px;
     margin: 0;
+    font-weight: 400;
   }
 
   .info__spkm_km {
     font-family: "Montserrat", arial, helvetica, sans-serif;
+    font-weight: 600;
     background-position-y: 184%;
     padding-left: 6.5%;
     position: relative;
@@ -376,6 +380,7 @@ a, button {
   }
 
   .distance {
+    font-weight: 400;
     font-size: 15px;
     margin: 0;
   }
@@ -414,6 +419,7 @@ a, button {
     text-align: center;
     font-size: 13px;
     font-family: "Montserrat", arial, helvetica, sans-serif;
+    font-weight: 700;
   }
 
   .arrow {
@@ -920,6 +926,7 @@ a, button {
 .drive__text {
   width: 91%;
   font-size: 16px;
+  font-weight: 500;
   color: #ffffff;
   font-family: "Montserrat", arial, helvetica, sans-serif;
 }
@@ -947,15 +954,18 @@ h1, h4 {
 }
 
 .options__display_title {
+  font-weight: 600;
   font-size: 37px;
   margin-bottom: 0;
 }
 
 .inch {
+  font-weight: 600;
   font-size: 20px;
 }
 
 .option__display_text {
+  font-weight: 400;
   font-size: 13px;
   margin-top: 0;
   font-weight: normal;
@@ -974,12 +984,14 @@ h1, h4 {
 }
 
 .options__wifi_title {
+  font-weight: 600;
   font-size: 21px;
   line-height: 21px;
   margin-bottom: 0;
 }
 
 .option__wifi_text {
+  font-weight: 400;
   width: 44%;
   font-size: 13px;
   margin-top: 0;
@@ -997,6 +1009,7 @@ h1, h4 {
 }
 
 .options__bag_title {
+  font-weight: 600;
   font-size: 30px;
   letter-spacing: 6px;
   line-height: 21px;
@@ -1004,11 +1017,13 @@ h1, h4 {
 }
 
 .liters {
+  font-weight: 600;
   font-size: 17px;
   letter-spacing: 2px
 }
 
 .option__bag_text {
+  font-weight: 400;
   width: 63%;
   font-size: 12px;
   margin-top: 0;
@@ -1017,6 +1032,7 @@ h1, h4 {
 }
 
 .more__info {
+  font-weight: 700;
   position: relative;
   left: 11%;
   width: 44%;
@@ -1041,6 +1057,7 @@ h1, h4 {
 }
 
 .more__order {
+  font-weight: 700;
   background: #E51937;
   padding-top: 11px;
   position: relative;
@@ -1531,6 +1548,7 @@ h1, h4 {
 }
 
 .protection__front_title {
+  font-weight: 700;
   font-family: "Montserrat", arial, helvetica, sans-serif;
   font-size: 18px;
   color: #fff;
@@ -1563,6 +1581,7 @@ h1, h4 {
 }
 
 .protection__side_title {
+  font-weight: 700;
   font-family: "Montserrat", arial, helvetica, sans-serif;
   font-size: 18px;
   color: #fff;
@@ -1600,6 +1619,7 @@ h1, h4 {
 }
 
 .protection__rack_title {
+  font-weight: 700;
   font-family: "Montserrat", arial, helvetica, sans-serif;
   font-size: 18px;
   color: #fff;
@@ -1630,6 +1650,7 @@ h1, h4 {
 }
 
 .protection__driver_title {
+  font-weight: 700;
   font-family: "Montserrat", arial, helvetica, sans-serif;
   font-size: 18px;
   color: #fff;
@@ -1661,6 +1682,7 @@ h1, h4 {
 }
 
 .protection__passangeer_title {
+  font-weight: 700;
   font-family: "Montserrat", arial, helvetica, sans-serif;
   font-size: 18px;
   color: #fff;
@@ -1689,6 +1711,7 @@ h1, h4 {
 }
 
 .info-safety__result {
+  font-weight: 600;
   font-size: 52px;
   color: #fff;
   padding-left: 20%;
@@ -1702,6 +1725,7 @@ h1, h4 {
 }
 
 .sesurity {
+  font-weight: 600;
   font-size: 32px;
   position: relative;
   top: -31px;
@@ -1712,6 +1736,7 @@ h1, h4 {
 }
 
 .more-safety__info {
+  font-weight: 700;
   position: relative;
   width: 32%;
   margin-left: 9%;
@@ -1737,6 +1762,7 @@ h1, h4 {
 }
 
 .more-safety__order {
+  font-weight: 700;
   padding-top: 11px;
   position: relative;
   top: 2px;
