--- a/style.css
+++ b/style.css
@@ -330,7 +330,6 @@ a, button {
     height: 55px;
     background-repeat: no-repeat;
     background-size: 30%;
-    background-position-y: 154%;
     background-image: url(img/spedometr.svg);
   }
 
@@ -398,7 +397,8 @@ a, button {
     padding-left: 4%;
     font-family: "Montserrat", arial, helvetica, sans-serif;
     background-image: url(img/rul-red.svg);
-    background-position-y: 33%
+    background-position-y: 33%;
+    color: #e51937;
   }
 
   .info__more_order {
@@ -518,16 +518,17 @@ a, button {
     padding-left: 7%;
     font-size: 13px;
     margin-left: 9.9%;
-    top: 37px;
-    width: 29%;
+    top: 38px;
+    width: 31%;
     height: 32px;
   }
 
   .info__more_order {
     width: 42.5%;
-    padding-top: 2px;
+    padding-top: 11px;
+    padding-bottom: 11px;
     margin-left: 0.9%;
-    top: 36px;
+    top: 37px;
     font-size: 11px;
     letter-spacing: 1.4px;
     background: #e51937;
@@ -642,7 +643,7 @@ a, button {
   letter-spacing: 0.7px;
   color: #e51937;
   background-image: url(img/rul-red.svg);
-  width: 17.5%;
+  width: 19.5%;
   height: 52px;
   margin-left: 22.5%;
   margin-top: 0.5%;
@@ -745,6 +746,7 @@ a, button {
 }
 
 .info__more_test {
+  color: #000;
   background-image: url(img/rul.svg);
   width: 129px;
   height: 40px;
@@ -836,10 +838,12 @@ a, button {
 }
 
 .info__more_test {
+  background-image: url(img/rul.svg);
   background-position-y: 20%;
   padding-left: 7%;
   width: 29.5%;
   margin-left: 8.5%;
+  color: #000;
 }
 
 .info__more_order {
@@ -866,8 +870,7 @@ a, button {
 }
 
 .future__title {
-  margin-bottom: 67%;
-  position: relative;
+  position: absolute;
   margin-left: 8.6%;
   width: 278px;
   height: 86px;
@@ -1126,6 +1129,10 @@ h1, h4 {
     margin: 0;
  }
 
+ .options {
+   padding-top: 2.5%;
+ }
+
 .info-safety {
   padding-bottom: 0%;
 }
@@ -1138,7 +1145,7 @@ h1, h4 {
  }
 
 .future-block {
-  margin-bottom: 51%;
+  margin-bottom: 73%;
   width: 40%;
   left: 56.5%;
 }
@@ -1179,7 +1186,6 @@ h1, h4 {
   width: 50%;
   position: relative;
   left: 20.5%;
-  padding-top: 5%;
   margin-bottom: 0;
 }
 
@@ -1194,6 +1200,7 @@ h1, h4 {
 }
 
 .options__wifi {
+  background-size: 15%;
   margin-top: 6%;
   padding-left: 17.3%;
   width: 60%;
@@ -1242,7 +1249,7 @@ h1, h4 {
   font-size: 16px;
   vertical-align: super;
   margin-left: 0.8%;
-  width: 24%;
+  width: 27%;
 }
 
 .more__icon::before {
@@ -1279,6 +1286,8 @@ h1, h4 {
   }
 
   .future__title {
+    margin-top: 1%;
+    margin-left: 5%;
     margin-bottom: 97%;
     width: 28%;
   }
@@ -2071,26 +2080,28 @@ h1, h4 {
     flex-direction: column;
     display: flex;
     width: 100%;
-    margin-top: 9%;
+    margin-top: 1%;
     position: relative;
     margin-bottom: 0;
   }
 
   .protection__title {
     width: 70%;
+    height: 33px;
+    margin-bottom: 0;
   }
 
   .description__title {
-    padding-top: 13%;
-    margin-left: 9%;
+    padding-top: 5%;
+    margin-left: 5%;
     font-size: 21px;
   }
 
   .description__text {
-    letter-spacing: 1.7px;
-    margin-left: 9%;
+    letter-spacing: 1px;
+    margin-left: 5%;
     width: 90%;
-    font-size: 14px;
+    font-size: 13px;
   }
 
   .protection__front {
@@ -2174,7 +2185,7 @@ h1, h4 {
   }
 
 .info-safety__result {
-  margin-bottom: 0;
+  margin-bottom: 7%;
   width: 64%;
   background-size: 21%;
   font-size: 37px;
@@ -2188,11 +2199,11 @@ h1, h4 {
   .opa {
     display: flex;
     flex-direction: column;
-    margin-bottom: 14%;
+    margin-bottom: 5%;
   }
 
   .more-safety {
-    padding-bottom: 7.2%;
+    padding-bottom: 0;
   }
 
   .more-safety__icon {
@@ -2504,8 +2515,7 @@ h1, h4 {
 
   .options__display {
     margin-bottom: 11%;
-    height: 37px;
-    background-position-y: 77%;
+    height: 40px;
   }
 
   .options__display_title {
@@ -2550,7 +2560,7 @@ h1, h4 {
   }
 
   .future-block {
-    margin-bottom: 43%;
+    margin-bottom: 75%;
   }
 
   .more__info {
