--- a/style.css
+++ b/style.css
@@ -270,13 +270,13 @@ a, button {
 
   .menu-models {
     padding-top: 1%;
-    width: 54%;
+    width: 53%;
     margin-right: 1%;
   }
 
   .shop {
     padding-top: 1%;
-    width: 20%;
+    width: 18%;
     margin-right: 1%;
   }
 }
@@ -327,14 +327,13 @@ a, button {
     padding-left: 9%;
     display: inline-block;
     width: 15%;
-    height: 55px;
     background-repeat: no-repeat;
     background-size: 30%;
     background-image: url(img/spedometr.svg);
   }
 
   .sec {
-    margin: 7% 0 0 0;
+    margin: 0;
     font-size: 37px;
     font-family: "Montserrat", arial, helvetica, sans-serif;
     font-weight: 600;
@@ -365,7 +364,7 @@ a, button {
   }
 
   .km632 {
-    margin: 7% 0 0 0;
+    margin: 0;
     font-size: 37px;
     font-family: "Montserrat", arial, helvetica, sans-serif;
     font-weight: 600;
@@ -382,7 +381,6 @@ a, button {
   }
 
   .info__more_test {
-    padding-top: 2%;
     font-size: 14px;
     letter-spacing: 0.3px;
     font-weight: 700;
@@ -392,12 +390,7 @@ a, button {
     width: 120px;
     height: 25px;
     display: inline-block;
-    background-repeat: no-repeat;
-    background-size: 15%;
-    padding-left: 4%;
     font-family: "Montserrat", arial, helvetica, sans-serif;
-    background-image: url(img/rul-red.svg);
-    background-position-y: 33%;
     color: #e51937;
   }
 
@@ -515,11 +508,14 @@ a, button {
   }
 
   .info__more_test {
+    background-image: url(img/rul-red.svg);
+    background-repeat: no-repeat;
+    background-size: 16%;
     padding-left: 7%;
     font-size: 13px;
     margin-left: 9.9%;
-    top: 38px;
-    width: 31%;
+    top: 36px;
+    width: 29%;
     height: 32px;
   }
 
@@ -591,12 +587,11 @@ a, button {
 
  .info__spkm_speed {
    margin-right: 0;
-   background-size: 34%;
+   background-size: 30%;
    padding-left: 12%;
    margin-left: 17.5%;
-   background-position-y: 115%;
-   width: 19%;
-   height: 81.26px;
+   background-position-y: 67%;
+   width: 23%;
 }
 
 .sec {
@@ -617,16 +612,16 @@ a, button {
 
 .info__spkm_km {
   padding-left: 8.8%;
-  margin-left: 6.2%;
+  margin-left: 2.2%;
   width: 26%;
-  height: 96.12px;
   background-size: 22%;
-  background-position-y: 159%;
+  background-position-y: 116%;
+  padding-bottom: 2%;
 }
 
 .km632 {
   font-size: 50px;
-  margin-top: 6%;
+  margin-top: 2%;
 }
 
 .km632_km {
@@ -642,28 +637,35 @@ a, button {
 .info__more_test {
   letter-spacing: 0.7px;
   color: #e51937;
-  background-image: url(img/rul-red.svg);
-  width: 19.5%;
-  height: 52px;
-  margin-left: 22.5%;
+  margin-left: 29%;
   margin-top: 0.5%;
-  padding-left: 6.3%;
-  top: 10px;
+  top: -4px;
   font-size: 15px;
-  background-position-y: 27%;
-  background-size: 18%;
+}
+
+.info__more_test::before {
+  position: relative;
+  display: block;
+  width: 32px;
+  height: 32px;
+  content: "";
+  background-image: url(img/rul-red.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  top: 95%;
+  left: -41%;
 }
 
 .info__more_order {
-  margin-left: 1.5%;
   letter-spacing: 1px;
   padding-top: 0%;
   width: 29%;
-  top: 10px;
+  top: -6px;
   height: 56px;
-  font-size: 14px;
+  font-size: 15px;
   background: #E51937;
   color: #FFFFFF;
+  margin-left: 3.2%;
 }
 
 .arrow {
@@ -709,13 +711,13 @@ a, button {
 }
 
 .info {
-  margin-bottom: 1.75%;
+  margin-bottom: 2%;
 }
 
 .info__spkm_speed {
   background-size: 32%;
-  top: -8px;
   position: relative;
+  background-position-y: 80%;
 }
 
 .info__spkm_km {
@@ -753,7 +755,9 @@ a, button {
 }
 
 .info__more_order {
-  padding-top: 0;
+  padding-bottom: 9px;
+  padding-top: 7px;
+  top: 7px;
   font-size: 14px;
 }
 
@@ -839,11 +843,13 @@ a, button {
 
 .info__more_test {
   background-image: url(img/rul.svg);
+  background-repeat: no-repeat;
   background-position-y: 20%;
   padding-left: 7%;
   width: 29.5%;
   margin-left: 8.5%;
   color: #000;
+  top: 15px;
 }
 
 .info__more_order {
@@ -1249,7 +1255,8 @@ h1, h4 {
   font-size: 16px;
   vertical-align: super;
   margin-left: 0.8%;
-  width: 27%;
+  width: 34%;
+  display: initial;
 }
 
 .more__icon::before {
@@ -1271,7 +1278,7 @@ h1, h4 {
   width: 29%;
   height: 54px;
   font-size: 13px;
-  margin-left: 10.4%;
+  margin-left: 15%;
   left: 1.4%;
   padding-top: 0;
   letter-spacing: 2px;
@@ -1761,6 +1768,7 @@ h1, h4 {
 }
 
 .more-safety__order {
+  background: #E51937;
   font-weight: 700;
   padding-top: 11px;
   position: relative;
@@ -2032,7 +2040,7 @@ h1, h4 {
 
 .more-safety {
   padding-bottom: 7.2%;
-  margin-top: 9%;
+  margin-top: 9.5%;
 }
 
 .more-safety__icon {
@@ -2046,15 +2054,17 @@ h1, h4 {
   margin-left: 8.5%;
   width: 25%;
   vertical-align: super;
+  display: initial;
 }
 
 .more-safety__order {
-  margin-left: 0;
-  width: 28%;
+  margin-left: 5.55%;
+  width: 28.5%;
   height: 35px;
-  top: -9px;
+  top: -13px;
   font-size: 16px;
   padding-top: 15px;
+  padding-bottom: 34px;
   vertical-align: sub;
 }
 }
@@ -2228,7 +2238,7 @@ h1, h4 {
     top: -11px;
     font-size: 11px;
     padding-top: 5px;
-    padding-bottom: 5px;
+    padding-bottom: 17px;
   }
 
   .WHS__title {
@@ -2365,6 +2375,7 @@ h1, h4 {
 }
 
 .info-safety__result {
+  margin-left: 15%;
   font-family: "Montserrat", arial, helvetica, sans-serif;
   margin-top: 23%;
   font-size: 49px;
@@ -2501,7 +2512,7 @@ h1, h4 {
     font-size: 13px;
     height: 14px;
     top: -13px;
-    padding: 10px 0;
+    padding: 10px 0 25px 0;
   }
 
   .drive__title {
